--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Danielle Lane's Portfolio</title>
+</head>
+<body>
+
+</body>
+</html>
