--- a/index.html
+++ b/index.html
@@ -4,30 +4,20 @@
     <meta charset="UTF-8">
     <title>Danielle Lane's Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="main-nav">
-        <ul class="nav">
-            <li class="nav-item">
-                <h1 id="name">Danielle Lane</h1>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-        </ul>
+<!--jumbotron start------------>
+    <div class="jumbotron">
+
     </div>
 
-    <div id="info">
-        <h1>Howdy</h1>
+<!--main content start--------->
+    <div class="container">
+        <!-- Content here -->
     </div>
+
+
 
 
 
