added a nav bar

--- a/index.html
+++ b/index.html
@@ -4,18 +4,51 @@
     <meta charset="UTF-8">
     <title>Danielle Lane's Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Fjalla+One|Righteous&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/580564fee5.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
+<body class="container">
+<!--navbar start--------------------------->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <ul class="navbar-nav d-flex flex-row-end">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Portfolio
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Projects</a>
+                    <a class="dropdown-item" href="https://github.com/danilane1821">GitHub</a>
+                </div>
+            </li>
+        </ul>
+</nav>
+
+
+
 <!--jumbotron start------------>
     <div class="jumbotron">
-
+    <h1 id="jumh1">Danielle Lane</h1>
+    <h2 id="jumh2">Junior Web Developer</h2>
     </div>
 
-<!--main content start--------->
-    <div class="container">
-        <!-- Content here -->
+    <!--main content start--------->
+    <div id="about-me" class="container">
+        <div class="row">
+            <div class="col-sm">
+        <h3 id="abouth3">Hello All,</h3>
+        <p>My name is Danielle Lane</p>
+            </div>
+                <div id="other" class="col-sm">
+                    <h3 id="otherh3">Hello All,</h3>
+                    <p>My name is Danielle Lane</p>
+                </div>
+        </div>
     </div>
+
 
 
 
