chnages to about section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container">
 <!--navbar start--------------------------->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <ul class="navbar-nav d-flex flex-row-end">
+        <ul class="navbar-nav m-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
             </li>
@@ -29,6 +29,7 @@
 
 
 
+
 <!--jumbotron start------------>
     <div class="jumbotron">
     <h1 id="jumh1">Danielle Lane</h1>
@@ -39,12 +40,13 @@
     <div id="about-me" class="container">
         <div class="row">
             <div class="col-sm">
-        <h3 id="abouth3">Hello All,</h3>
-        <p>My name is Danielle Lane</p>
+        <h3 id="abouth3">Hello All!</h3>
+        <p class="float-right">My name is Danielle Lane</p>
+        <img id="placeholder" class="float-left" src="https://via.placeholder.com/350">
+
             </div>
                 <div id="other" class="col-sm">
-                    <h3 id="otherh3">Hello All,</h3>
-                    <p>My name is Danielle Lane</p>
+                    <h3 id="otherh3">Howdy</h3>
                 </div>
         </div>
     </div>
