style and color changes;

--- a/index.html
+++ b/index.html
@@ -9,53 +9,42 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="container">
-<!--navbar start--------------------------->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <ul class="navbar-nav m-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Portfolio
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Projects</a>
-                    <a class="dropdown-item" href="https://github.com/danilane1821">GitHub</a>
-                </div>
-            </li>
-        </ul>
-</nav>
 
-
-
-
-<!--jumbotron start------------>
-    <div class="jumbotron">
+<div class="jumbotron">
     <h1 id="jumh1">Danielle Lane</h1>
     <h2 id="jumh2">Junior Web Developer</h2>
-    </div>
+</div>
 
-    <!--main content start--------->
-    <div id="about-me" class="container">
-        <div class="row">
-            <div class="col-sm">
-        <h3 id="abouth3">Hello All!</h3>
-        <p class="float-right">My name is Danielle Lane</p>
-        <img id="placeholder" class="float-left" src="https://via.placeholder.com/350">
+<main class="main">
+<!--    side nav start-->
+    <nav class="nav navbar navbar-dark bg-dark">
+                <ul class="navbar-nav m-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Portfolio
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="#">Projects</a>
+                            <a class="dropdown-item" href="https://github.com/danilane1821">GitHub</a>
+                        </div>
+                    </li>
+                </ul>
+        </nav>
+    </nav>
 
-            </div>
-                <div id="other" class="col-sm">
-                    <h3 id="otherh3">Howdy</h3>
-                </div>
-        </div>
-    </div>
+<!--    main content-->
+    <article class="article">
 
+    </article>
 
+<!--    footer-->
+    <footer class="footer">
 
-
-
-
+    </footer>
+</main>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
