--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 id="jumh1">Danielle Lane</h1>
     <h2 id="jumh2">Junior Web Developer</h2>
 </div>
-
+<div id="missue"></div>
 <main class="main">
 <!--    side nav start-->
     <nav class="nav navbar navbar-dark bg-dark">
