--- a/index.html
+++ b/index.html
@@ -10,41 +10,41 @@
 </head>
 <body class="container">
 
-<div class="jumbotron">
-    <h1 id="jumh1">Danielle Lane</h1>
-    <h2 id="jumh2">Junior Web Developer</h2>
-</div>
-<div id="missue"></div>
-<main class="main">
-<!--    side nav start-->
-    <nav class="nav navbar navbar-dark bg-dark">
-                <ul class="navbar-nav m-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Portfolio
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Projects</a>
-                            <a class="dropdown-item" href="https://github.com/danilane1821">GitHub</a>
-                        </div>
-                    </li>
-                </ul>
+    <div class="jumbotron">
+        <h1 id="jumh1">Danielle Lane</h1>
+        <h2 id="jumh2">Junior Web Developer</h2>
+    </div>
+
+    <main class="main">
+    <!--    side nav start-->
+        <nav class="nav navbar navbar-dark bg-dark d-flex align-items-start">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Portfolio
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="#">Projects</a>
+                                <a class="dropdown-item" href="https://github.com/danilane1821">GitHub</a>
+                            </div>
+                        </li>
+                    </ul>
+            </nav>
         </nav>
-    </nav>
 
-<!--    main content-->
-    <article class="article">
+    <!--    main content-->
+        <article class="article">
 
-    </article>
+        </article>
 
-<!--    footer-->
-    <footer class="footer">
+    <!--    footer-->
+        <footer class="footer">
 
-    </footer>
-</main>
+        </footer>
+    </main>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
