added some content

--- a/index.html
+++ b/index.html
@@ -37,7 +37,20 @@
 
     <!--    main content-->
         <article class="article">
+            <p id="hello" class="">HELLO EVERYBODY, I AM</p>
+            <h2 id="name">DANIELLE LANE</h2>
+            <p id="junior">Junior Web Developer</p>
+            <div id="info">
 
+                <i class="fas fa-mobile-alt"></i><span>(210)563-5784</span><br>
+                <i class="fas fa-home"></i><span>San Antonio, Texas</span><br>
+                <i class="fas fa-birthday-cake"></i><span>September 10th, 1994</span><br>
+                <i class="fas fa-envelope-open-text"></i><span>daniellelane1821@gmail.com</span>
+            </div>
+<!--            <div id="social-links">-->
+<!--                <a href=""><i class="fab fa-github-square"></i></a> <a href=""><i class="fab fa-linkedin"></i></a>-->
+<!--            </div>-->
+<!--            <img id="placeholder" class="float-left ml-3 mt-3" src="img/conputer.jpg">-->
         </article>
 
     <!--    footer-->
