moved around content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Danielle Lane's Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Fjalla+One|Righteous&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/580564fee5.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -37,15 +38,17 @@
 
     <!--    main content-->
         <article class="article">
-            <p id="hello" class="">HELLO EVERYBODY, I AM</p>
-            <h2 id="name">DANIELLE LANE</h2>
-            <p id="junior">Junior Web Developer</p>
+            <div id="about-me-image">
+<!--                <img src="https://via.placeholder.com/280x350">-->
+            </div>
             <div id="info">
-
-                <i class="fas fa-mobile-alt"></i><span>(210)563-5784</span><br>
-                <i class="fas fa-home"></i><span>San Antonio, Texas</span><br>
-                <i class="fas fa-birthday-cake"></i><span>September 10th, 1994</span><br>
-                <i class="fas fa-envelope-open-text"></i><span>daniellelane1821@gmail.com</span>
+                <p id="hello">HELLO EVERYBODY, I AM</p>
+                <h2 id="name">DANIELLE LANE</h2>
+                <p id="junior">JUNIOR WEB DEVELOPER</p>
+                <i class="fas fa-mobile-alt info-icon"></i> <span class="span-color">(210)563-5784</span><br>
+                <i class="fas fa-home info-icon"></i> <span class="span-color">San Antonio, Texas</span><br>
+                <i class="fas fa-birthday-cake info-icon"></i> <span class="span-color">September 10th, 1994</span><br>
+                <i class="fas fa-envelope-open-text info-icon"></i> <span class="span-color">daniellelane1821@gmail.com</span>
             </div>
 <!--            <div id="social-links">-->
 <!--                <a href=""><i class="fab fa-github-square"></i></a> <a href=""><i class="fab fa-linkedin"></i></a>-->
