--- a/index.html
+++ b/index.html
@@ -3,68 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Danielle Lane's Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Cinzel|Fjalla+One|Righteous&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/580564fee5.js"></script>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="container">
-
-    <div class="jumbotron">
-        <h1 id="jumh1">Danielle Lane</h1>
-        <h2 id="jumh2">Junior Web Developer</h2>
-    </div>
-
-    <main class="main">
-    <!--    side nav start-->
-        <nav class="nav navbar navbar-dark bg-dark d-flex align-items-start">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">About me <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Portfolio
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Projects</a>
-                                <a class="dropdown-item" href="https://github.com/danilane1821">GitHub</a>
-                            </div>
-                        </li>
-                    </ul>
-            </nav>
-        </nav>
-
-    <!--    main content-->
-        <article class="article">
-            <div id="about-me-image">
-<!--                <img src="https://via.placeholder.com/280x350">-->
-            </div>
-            <div id="info">
-                <p id="hello">HELLO EVERYBODY, I AM</p>
-                <h2 id="name">DANIELLE LANE</h2>
-                <p id="junior">JUNIOR WEB DEVELOPER</p>
-                <i class="fas fa-mobile-alt info-icon"></i> <span class="span-color">(210)563-5784</span><br>
-                <i class="fas fa-home info-icon"></i> <span class="span-color">San Antonio, Texas</span><br>
-                <i class="fas fa-birthday-cake info-icon"></i> <span class="span-color">September 10th, 1994</span><br>
-                <i class="fas fa-envelope-open-text info-icon"></i> <span class="span-color">daniellelane1821@gmail.com</span>
-            </div>
-<!--            <div id="social-links">-->
-<!--                <a href=""><i class="fab fa-github-square"></i></a> <a href=""><i class="fab fa-linkedin"></i></a>-->
-<!--            </div>-->
-<!--            <img id="placeholder" class="float-left ml-3 mt-3" src="img/conputer.jpg">-->
-        </article>
-
-    <!--    footer-->
-        <footer class="footer">
-
-        </footer>
-    </main>
+<body>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
 </html>
